--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,26 @@
-server.port= 8088
+server.port= 8080
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_web_blog
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_web_blog
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+
+# OracleDB connection settings
+spring.datasource.url=jdbc:oracle:thin:@//172.18.10.48:1521/NciTest
+spring.datasource.username=dbadmin
+spring.datasource.password=admin90?*
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# HikariCP settings
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPoolBooks
+
+# JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.hibernate.ddl-auto=create
